objects/Timeslot_Definition__c.object
<CustomObject><fields>
        <fullName>Academic_Coaching__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CASA Appointment Reason</description>
        <label>Academic Coaching</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Academic_Probation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CASA Appointment Reason</description>
        <label>Academic Probation</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>CWID__c</fullName>
        <formula>Student__r.CWID__c</formula>
        <label>CWID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Centre__c</fullName>
        <label>Centre</label>
        <picklist>
            <controllingField>Department__c</controllingField>
            <picklistValues>
                <fullName>USF Location 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USF Location  2</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Courses__c</fullName>
        <label>Courses</label>
        <picklist>
            <controllingField>Centre__c</controllingField>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS in Computer Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nano Tech</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Department__c</fullName>
        <description>List Of Departments</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>CASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LWC</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Email__c</fullName>
        <formula>Student__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Financial_Concerns__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CASA Appointment Reason</description>
        <label>Financial Concerns</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Housing_Residence_Hall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CASA Appointment Reason</description>
        <label>Housing / Residence Hall</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Interview_Location__c</fullName>
        <label>Interview Location</label>
        <picklist>
            <picklistValues>
                <fullName>East Lansing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troy</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Leave_of_Absence_Withdrawal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CASA Appointment Reason</description>
        <label>Leave of Absence / Withdrawal</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Length_Of_Appointment__c</fullName>
        <label>Length Of Appointment</label>
        <picklist>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Major_Minor_Exploration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CASA Appointment Reason</description>
        <label>Major / Minor Exploration</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>New_Student_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CASA Appointment Reason</description>
        <label>New Student Survey</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Personal_Concerns__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CASA Appointment Reason</description>
        <label>Personal Concerns</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Phone__c</fullName>
        <formula>Student__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Appointment Definition</relationshipLabel>
        <relationshipName>Timeslot_Definition</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Referred_By__c</fullName>
        <description>CASA Appointment Reason (Referral)</description>
        <label>Referred By</label>
        <picklist>
            <picklistValues>
                <fullName>Faculty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent / Guardian</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Registration_Assistance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CASA Appointment Reason</description>
        <label>Registration Assistance</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Request_Course_Tutor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Show course enrollment records with course offerings that Peer Tutoring is available.</description>
        <label>Request Course Tutor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>hed__Course_Enrollment__c.hed__Course_Offering__r.LWC_Tutor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>hed__Course_Enrollment__c</referenceTo>
        <relationshipLabel>Appointment Definition</relationshipLabel>
        <relationshipName>Appointment_Definition</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Self_Reported_Email__c</fullName>
        <label>Self-Reported Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Self_Reported_Phone__c</fullName>
        <label>Self-Reported Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointment (Staff)</relationshipLabel>
        <relationshipName>Appointment_Staff</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed by Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missed by Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checked In</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Study_Abroad__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CASA Appointment Reason</description>
        <label>Study Abroad</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Type_of_Appointment__c</fullName>
        <label>Type of Appointment</label>
        <picklist>
            <picklistValues>
                <fullName>Counseling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Enrollment</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Type_of_Interview__c</fullName>
        <label>Type of Interview</label>
        <picklist>
            <picklistValues>
                <fullName>Skype Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location - Troy Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Location - Lansing Campus</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Appointment Definition</label><nameField>
        <label>Appointment Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Appointment Definition</pluralLabel><sharingModel>Read</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Length_Of_Appointment__c</columns>
        <columns>Program__c</columns>
        <columns>Type_of_Appointment__c</columns>
        <columns>Type_of_Interview__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><validationRules>
        <fullName>Need_Location_If_In_Person</fullName>
        <active>true</active>
        <description>If the interview type is In Person the Location must be selected.</description>
        <errorConditionFormula>ISBLANK(TEXT(  Interview_Location__c  )) &amp;&amp;  ISPICKVAL( Type_of_Interview__c , "In Person")</errorConditionFormula>
        <errorMessage>You must select an Interview Location when selecting In Person as the Interview Type.</errorMessage>
    </validationRules></CustomObject>